--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,156 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffff;
+  overflow-x: hidden;
+}
+
+/* width */
+body::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+body::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: rgba(123, 52, 221, 0.5)
+}
+
+/* Handle */
+body::-webkit-scrollbar-thumb {
+  background: #7b34dd;
+}
+
+/* Handle on hover */
+body::-webkit-scrollbar-thumb:hover {
+  background: #64748b;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.bgGradient {
+  background: linear-gradient(153deg, rgba(113,43,218,1) 36%, rgba(164,93,235,1) 100%);
+}
+
+input.centeredValue {
+  text-align: center;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.container-snap::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.container-snap {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-invisible::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-invisible {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.centeredValue::-webkit-input-placeholder {
+  /* WebKit, Blink, Edge */
+  color: #64748b;
+  font-weight: 500;
+}
+.centeredValue:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #64748b;
+  font-weight: 500;
+  opacity: 1;
+}
+.centeredValue::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #64748b;
+  font-weight: 500;
+  opacity: 1;
+}
+.centeredValue:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #64748b;
+  font-weight: 500;
+}
+
+.gradientHeader {
+  background: linear-gradient(100deg, rgba(113,43,218,1) 36%, rgba(164,93,235,1) 100%) !important;
+}
+
+.shadowedHeader {
+box-shadow: 0px 5px 8px 0px rgba(0,0,0,0.29);
+-webkit-box-shadow: 0px 5px 8px 0px rgba(0,0,0,0.29);
+-moz-box-shadow: 0px 5px 8px 0px rgba(0,0,0,0.29);
+}
+
+.ant-btn:hover { background: rgba(255,255,255,0.0) !important; }
+
+.resultCard .ant-card-body {
+  padding: 12px 12px 11px 10px !important;
+  width: 100%;
+}
+
+.ant-card.ant-card-bordered.resultCard  {
+  border-radius: 10px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+.centered-axis-xy {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%);
+}
+
+.truncatedText {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  overflow: hidden;
+}
+
+.ant-modal-mask {
+  background-color: rgba(28, 28, 45, 0.9) !important;
+}
+
+.transparentModal .ant-modal-content {
+  background-color: rgba(255, 255, 255, 0.0) !important;
+  box-shadow: none !important;
+}
+
+.cursorPointer {
+  cursor: pointer !important;
+}
+
+.clickable {
+  -webkit-filter: brightness(100%);
+}
+
+.clickable:hover {
+  -webkit-filter: brightness(70%);
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
 }
